[project]
name = "comfyui-3d-viewer"
description = "A ComfyUI node that embeds an interactive 3D viewer widget"
version = "1.0.0"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/your-username/comfyui-3d-viewer"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["web/**/*"]